--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="total_followers">34 Followers</string>
     <string name="tab_text_1">Following</string>
     <string name="tab_text_2">Followers</string>
+    <string name="favorite">Favorite</string>
+    <string name="setting">Setting</string>
+    <string name="dark_mode">Dark Mode</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
